# interview-prep

.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Algorithms/: CMakeLists.txt  ZeroMatrix.cpp  ZeroMatrix.h  main.cpp
Algorithms(Python)/arrays/: CMakeLists.txt  URLify.py  meme.cpp  palindrome_permutation.py  rotate_matrix.py  string_compression.py
Algorithms(Python)/sorting/: quick_sort.py
Algorithms/arrays/: check_permutation.py  is_unique.py  one_away.py
Algorithms/sorting/: quick_sort.py
Algorithms/zero_matrix/: zero_matrix_test.cpp
DS_Implementation_Java/src/com/company/: Main.java
DS_Implementation_Java/src/linked_list/: SinglyLinkedList.java
DataStructures/src/array/: DynamicArray.java
DataStructures/src/hash_map/: HashMap.java
DataStructures/src/queue/: QueueSLL.java
DataStructures/src/stack/: StackLinkedList.java
DataStructures/src/string_builder/: StringBuilder.java  StringBuilderTest.java
DesignPatterns/src/: Interpreter.java
DesignPatterns/src/FinalExam/: Banner.java  TestQueues.java  TestSalesTaxVisitor.java  wc.java  wcoo.java
DesignPatterns/src/Structural/: Tree.java
bigo/: bigo.rmd
csharp/Tutorial/Tutorial/: Tutorial.sln
ds/: ds.rmd
notes/: notes.ctb  notes.ctb~  notes.ctb~~  notes.ctb~~~
notes/legacy/ds/: .swp
(+15 files in other folders)
